--- a/index.html
+++ b/index.html
@@ -2,137 +2,239 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Нова посилка</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Міні база посилок</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
+      margin: 0;
       padding: 1rem;
-      background: #f0f0f0;
+      background-color: #f2f2f2;
     }
-    form {
-      background: white;
+
+    h1 {
+      text-align: center;
+      margin-bottom: 1rem;
+    }
+
+    form, .parcel-list {
+      background: #fff;
       padding: 1rem;
-      border-radius: 6px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+      margin-bottom: 1rem;
     }
+
     label {
       display: block;
       margin-top: 10px;
       font-weight: bold;
     }
+
     input, textarea {
       width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      font-size: 1rem;
+      padding: 0.6rem;
+      margin-top: 4px;
+      box-sizing: border-box;
+      border-radius: 5px;
+      border: 1px solid #ccc;
     }
+
     button {
-      margin-top: 15px;
-      padding: 12px;
+      margin-top: 1rem;
       width: 100%;
-      background: #007bff;
+      padding: 0.8rem;
+      background-color: #007bff;
       color: white;
       border: none;
+      border-radius: 6px;
       font-size: 1rem;
-      border-radius: 5px;
     }
-    .volume input {
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .parcel {
+      background: #fafafa;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 1rem;
+      margin-bottom: 0.7rem;
+    }
+
+    .parcel p {
+      margin: 0.3rem 0;
+      font-size: 0.92rem;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .nav-buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 1rem;
+    }
+
+    .nav-buttons button {
+      width: 48%;
+      background-color: #28a745;
+    }
+
+    .nav-buttons button:nth-child(2) {
+      background-color: #17a2b8;
+    }
+
+    .volumeWeightInput {
       margin-top: 5px;
-    }
-    .linkBtn {
-      background: #28a745;
-      margin-top: 10px;
     }
   </style>
 </head>
 <body>
 
-<h2>Нова посилка</h2>
+  <h1>Міні база посилок</h1>
 
-<form id="parcelForm">
-  <label>Номер посилки</label>
-  <input type="text" id="number" required />
+  <div class="nav-buttons">
+    <button onclick="showForm()">Додати посилку</button>
+    <button onclick="showList()">Переглянути посилки</button>
+  </div>
 
-  <label>Вага (кг)</label>
-  <input type="number" id="weight" required min="0" step="0.01" />
+  <!-- Форма -->
+  <form id="parcelForm">
+    <input type="hidden" id="editIndex" />
+    
+    <label for="parcelNumber">Номер посилки *</label>
+    <input id="parcelNumber" type="text" required />
 
-  <label>Кількість місць</label>
-  <input type="number" id="places" required min="1" step="1" />
+    <label for="weight">Вага (кг) *</label>
+    <input id="weight" type="number" step="0.01" min="0" required />
 
-  <div id="volumeFields" class="volume"></div>
+    <label for="placesCount">Кількість місць *</label>
+    <input id="placesCount" type="number" step="1" min="1" required />
 
-  <label>Місто</label>
-  <input type="text" id="city" required />
+    <div id="volumeWeightsContainer"></div>
 
-  <label>Відділення НП</label>
-  <input type="text" id="branch" required />
+    <label for="city">Місто *</label>
+    <input id="city" type="text" required />
 
-  <label>Телефон</label>
-  <input type="tel" id="phone" required pattern="^\+?\d{7,15}$" />
+    <label for="npBranch">Відділення Нової Пошти *</label>
+    <input id="npBranch" type="text" required />
 
-  <label>Ціна (€)</label>
-  <input type="number" id="price" required min="0" step="0.01" />
+    <label for="receiverPhone">Телефон *</label>
+    <input id="receiverPhone" type="tel" pattern="^\+?\d{7,15}$" required placeholder="+380..." />
 
-  <label>Опис</label>
-  <textarea id="desc"></textarea>
+    <label for="priceEuro">Ціна (€) *</label>
+    <input id="priceEuro" type="number" step="0.01" min="0" required />
 
-  <button type="submit">Додати</button>
-</form>
+    <label for="description">Опис</label>
+    <textarea id="description" rows="2"></textarea>
 
-<button class="linkBtn" onclick="window.open('list.html', '_blank')">📦 Переглянути всі посилки</button>
+    <button type="submit">Зберегти посилку</button>
+  </form>
+
+  <!-- Список -->
+  <div id="parcelList" class="parcel-list hidden">
+    <h3>Усі посилки</h3>
+    <div id="parcelContainer"></div>
+  </div>
 
 <script>
-  const form = document.getElementById('parcelForm');
-  const volumeFields = document.getElementById('volumeFields');
-  const placesInput = document.getElementById('places');
+  const parcelForm = document.getElementById("parcelForm");
+  const parcelContainer = document.getElementById("parcelContainer");
+  const parcelList = document.getElementById("parcelList");
+  const volumeWeightsContainer = document.getElementById("volumeWeightsContainer");
 
-  function renderVolumeInputs() {
-    const count = parseInt(placesInput.value);
-    volumeFields.innerHTML = '';
-    if (count > 0) {
-      for (let i = 0; i < count; i++) {
-        const input = document.createElement('input');
-        input.type = 'number';
-        input.required = true;
-        input.placeholder = `Обʼємна вага ${i + 1}`;
-        input.step = '0.01';
-        input.min = '0';
-        volumeFields.appendChild(input);
-      }
+  const parcels = JSON.parse(localStorage.getItem("parcels") || "[]");
+
+  const fields = [
+    "parcelNumber", "weight", "placesCount",
+    "city", "npBranch", "receiverPhone",
+    "priceEuro", "description"
+  ];
+
+  const placesInput = document.getElementById("placesCount");
+  placesInput.addEventListener("input", updateVolumeInputs);
+
+  function updateVolumeInputs() {
+    const count = parseInt(placesInput.value) || 0;
+    volumeWeightsContainer.innerHTML = "";
+    for (let i = 0; i < count; i++) {
+      const div = document.createElement("div");
+      div.classList.add("volumeWeightInput");
+      div.innerHTML = `
+        <label>Обʼємна вага місця ${i + 1} (кг)</label>
+        <input type="number" step="0.01" min="0" required name="volumeWeight" />
+      `;
+      volumeWeightsContainer.appendChild(div);
     }
   }
 
-  placesInput.addEventListener('input', renderVolumeInputs);
-
-  form.addEventListener('submit', function(e) {
+  parcelForm.onsubmit = function (e) {
     e.preventDefault();
 
-    const volumes = Array.from(volumeFields.querySelectorAll('input')).map(input => parseFloat(input.value));
-    if (volumes.some(isNaN)) {
-      alert('Введи всі обʼємні ваги');
-      return;
+    const formData = {};
+    fields.forEach(id => {
+      formData[id] = document.getElementById(id).value.trim();
+    });
+    formData.weight = parseFloat(formData.weight);
+    formData.priceEuro = parseFloat(formData.priceEuro);
+    formData.placesCount = parseInt(formData.placesCount);
+    formData.volumeWeights = Array.from(document.getElementsByName("volumeWeight")).map(i => parseFloat(i.value));
+    formData.createdAt = new Date().toISOString();
+
+    const editIndex = document.getElementById("editIndex").value;
+    if (editIndex) {
+      parcels[editIndex] = formData;
+    } else {
+      parcels.push(formData);
     }
 
-    const data = {
-      number: document.getElementById('number').value.trim(),
-      weight: parseFloat(document.getElementById('weight').value),
-      places: parseInt(document.getElementById('places').value),
-      volume: volumes,
-      city: document.getElementById('city').value.trim(),
-      branch: document.getElementById('branch').value.trim(),
-      phone: document.getElementById('phone').value.trim(),
-      price: parseFloat(document.getElementById('price').value),
-      desc: document.getElementById('desc').value.trim()
-    };
+    localStorage.setItem("parcels", JSON.stringify(parcels));
+    parcelForm.reset();
+    updateVolumeInputs();
+    showList();
+  };
 
-    let parcels = JSON.parse(localStorage.getItem('parcels') || '[]');
-    parcels.push(data);
-    localStorage.setItem('parcels', JSON.stringify(parcels));
-    form.reset();
-    volumeFields.innerHTML = '';
-    alert('Посилку додано!');
-  });
+  function showList() {
+    parcelForm.classList.add("hidden");
+    parcelList.classList.remove("hidden");
+    renderParcels();
+  }
+
+  function showForm() {
+    parcelForm.classList.remove("hidden");
+    parcelList.classList.add("hidden");
+  }
+
+  function renderParcels() {
+    parcelContainer.innerHTML = "";
+    if (parcels.length === 0) {
+      parcelContainer.innerHTML = "<p>Посилок поки немає.</p>";
+      return;
+    }
+    parcels.forEach((p, i) => {
+      const div = document.createElement("div");
+      div.className = "parcel";
+      div.innerHTML = `
+        <p><b>№:</b> ${p.parcelNumber}</p>
+        <p><b>Вага:</b> ${p.weight} кг</p>
+        <p><b>Кількість місць:</b> ${p.placesCount}</p>
+        <p><b>Обʼємна вага:</b> ${p.volumeWeights.join(", ")} кг</p>
+        <p><b>Місто:</b> ${p.city}</p>
+        <p><b>Відділення НП:</b> ${p.npBranch}</p>
+        <p><b>Телефон:</b> ${p.receiverPhone}</p>
+        <p><b>Ціна:</b> €${p.priceEuro.toFixed(2)}</p>
+        <p><b>Опис:</b> ${p.description || "-"}</p>
+        <p style="font-size: 0.8rem; color: #666;"><i>${new Date(p.createdAt).toLocaleString()}</i></p>
+      `;
+      parcelContainer.appendChild(div);
+    });
+  }
+
+  // Показати список одразу, якщо хочеш:
+  // showList();
 </script>
 
 </body>
